# unused-dependencies

./: .dockerignore  .flake8  .gitignore  LICENSE  README.md  mypy.ini  pyproject.toml  pyvenv.cfg
test/unit/: test_unused_dependencies.py
unused_dependencies/: __init__.py  main.py
