[tool.poetry]
name = "unnecessary-dependencies"
version = "0.0.0"
description = ""
authors = ["Jordan Wolfaardt"]

[tool.poetry.dependencies]
python = "^3.10"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
flake8-import-order = "^0.18.1"
mypy = "^1.0.1"
pytest = "^7.0.0"

[tool.black]
line-length = 99
target-version = ['py310']
